--- a/CANSniffer/CANSniffer.csproj
+++ b/CANSniffer/CANSniffer.csproj
@@ -46,6 +46,8 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BluetoothSerialPort.cs" />
+    <Compile Include="CANInterpreter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
