--- a/CANSniffer/CANSniffer.csproj
+++ b/CANSniffer/CANSniffer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BluetoothSerialPort.cs" />
     <Compile Include="CANInterpreter.cs" />
+    <Compile Include="HexKeyboardListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -64,6 +65,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\Settings.axml" />
     <AndroidResource Include="Resources\xml\hexkeyboard.xml" />
+    <AndroidResource Include="Resources\xml\slideup.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
