--- a/CANSniffer/Properties/AndroidManifest.xml
+++ b/CANSniffer/Properties/AndroidManifest.xml
@@ -4,5 +4,6 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name"></application>
 </manifest>
